2003-07-13  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/CgiUtils.{h,cpp}: Changed escapeString to form_urldecode
	* cgicc/CgiUtils,{h,cpp}: Added charToHex and form_urlencode

2003-07-11  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/CgiUtils.h: Change STDNS to std::
	* cgicc/FormEntry.cpp: Add std:: in front of atol and atof
	* cgicc/CgiEnvironment.cpp: Add std:: in front of atol
	* cgicc/CgiEnvironment.cpp: Use vector<char> instead of auto_ptr
	* THANKS: Added Aida Shinra
	* NEWS: Added blurb about namespace support

2002-12-04  Stephen F. Booth  <sbooth@gnu.org>

	* acinclude.m4: Generate error if namespaces not supported
	* configure.ac: Removed enabling/disabling of namespaces
	* cgicc/CgiDefs.h.in: Removed CGICC_USE_NAMESPACES
	* cgicc/*.{h,cpp}: CGICC_BEGIN_NAMESPACE, CGICC_END_NAMESPACE, 
	STDNS macros removed
	* demo/*.cpp: CGICC_BEGIN_NAMESPACE, CGICC_END_NAMESPACE, 
	STDNS macros removed
	* contrib/*.{h,cpp}: CGICC_BEGIN_NAMESPACE, CGICC_END_NAMESPACE, 
	STDNS macros removed
	* doc/Doxyfile.in: Reference to obsolete macros removed

2002-11-24  Stephen F. Booth  <sbooth@gnu.org>

	* configure.ac: Change $debug to $cgicc_debug
	* contrib/nph-hello.cpp: Added STDNS qualifier to ofstream and ios

2002-11-23  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/FormEntry.{h,cpp}: Added getIntegerValue(int, int, bool&)
	and getDoubleValue(double, double, bool&) to allow caller to
	determine if value was adjusted to specified limits
	(Suggested by Carsten@RollingHorse.com)
	* cgicc/CgiUtils.cpp(readString): Fixed memory leak reported 
	by bostjan@optonline.net (fix submitted by alexoss@verizon.net)
	* THANKS: Added Bostjan Lah and Carsten Gehrke
	* cgicc/CgiInput.cpp(getenv): Explicitly return STDNS string from
	ternary ? operator

2002-09-04  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/CgiEnvironment.cpp(parseCookie): Do not unescape the
	cookie name and data (Thanks to afm@othello.ch)
	* doc/Makefile.am: Install into DESTDIR (Thanks to naddy@mips.inka.de)